--- a/block-BJaajd/code/package.json
+++ b/block-BJaajd/code/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "calculator.js",
   "scripts": {
-    "test": "jest --watchAll --coverage"
+    "test": ""
   },
   "keywords": [],
   "author": "",
