--- a/block-BJaajd/code/package.json
+++ b/block-BJaajd/code/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "calculator.js",
-  "scripts": {
-    "test": "jest --watchAll --coverage"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
